===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    14 June 2012
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20120614
Tag Summary: Started the process of including documentation in the namelist
             definitions file, which also lead to changing a few examples in
             the README file. There will be at least one more tag with updates
             to the definitions file, but I want to make sure the first batch
             makes it into cesm1_1_beta16 (rest will probably be in beta17).

Files Modified:
M            38013   bld/namelist_files/namelist_definition_pop2.xml
M            37975   bld/README.build-namelist
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    12 June 2012
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20120612
Tag Summary: Fix a bug in pop2.buildnml.csh that broke $CASE.build and a bug
             in build-namelist that broke tavg streams for tracer modules.
             Also changed default values for renormalization vectors to actual
             vectors (except for shf_data_renorm, where default value doesn't
             match the documentation), and adding documentation to all forcing
             namelists.

Files Modified:
M            37975   bld/namelist_files/namelist_defaults_pop2.xml
M            37975   bld/namelist_files/namelist_definition_pop2.xml
M            37996   bld/pop2.buildnml.csh
M            37996   bld/build-namelist
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    11 June 2012
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20120611
Tag Summary: Allow build-namelist and namelist_defaults_pop2.xml to be modified
             in SourceMods/src.pop2/. Required adding optional cfg_dir flag to
             build-namelist and passing it from pop2.buildnml.csh if a copy