@@ -4920,7 +4920,7 @@ contains
  subroutine ecosys_set_sflux(SHF_QSW_RAW, SHF_QSW, &
                              U10_SQR,IFRAC,PRESS,SST,SSS, &
                              SURF_VALS_OLD,SURF_VALS_CUR,STF_MODULE)
-   use seq_io_mod, only : seq_io_getiotype, seq_io_getiosys
+   use shr_pio_mod, only : shr_pio_getiotype, shr_pio_getiosys
    use POP_IOUnitsMod, only: inst_name
 
 ! !DESCRIPTION:
@@ -5459,8 +5459,8 @@ contains
                                  FileName=(/trim(ndep_shr_stream_file)/),      &
                                  fldListFile=ndep_shr_stream_fldList,          &
                                  fldListModel=ndep_shr_stream_fldList,         &
-                                 pio_subsystem=seq_io_getiosys(inst_name),     &
-                                 pio_iotype=seq_io_getiotype(inst_name),       &
+                                 pio_subsystem=shr_pio_getiosys(inst_name),     &
+                                 pio_iotype=shr_pio_getiotype(inst_name),       &
                                  fillalgo='none', mapalgo='none')
          if (my_task == master_task) then
             call shr_strdata_print(ndep_sdat)
