@@ -1,6 +1,18 @@
 ===============================================================================
 Tag Creator: mlevy
 Developers:  mlevy
+Tag Date:    25 June 2012
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20120625
+Tag Summary: Updated PIO calls at request of Jim Edwards
+
+Files Modified:
+M            38119   source/io_pio.F90
+M            38119   source/moby_mod.F90
+M            38119   source/io_netcdf.F90
+M            38119   source/ecosys_mod.F90
+===============================================================================
+Tag Creator: mlevy
+Developers:  mlevy
 Tag Date:    14 June 2012
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20120614
 Tag Summary: Started the process of including documentation in the namelist
